# max-stk

./: Makefile  README.md
help/: stk.delay~.maxhelp  stk.sine~.maxhelp
source/projects/stk.delay~/: README.md  stk_delay~.cpp
source/projects/stk.sine~/: CMakeLists.txt  README.md  stk_sine~.cpp
